syntax = "proto3";

package user;
option go_package = "./user";
service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
//  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc PasswordChange(PasswordChangeRequest) returns (PasswordChangeResponse);
}
message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}
message RegisterResponse {
  string uuid = 1;
  string message = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}
message LoginResponse {
  string uuid = 1;
  bool success = 2;
  string message = 3;
}


message PasswordChangeRequest {
  string uuid = 1;
  string old_password = 2;
  string new_password = 3;
}

message PasswordChangeResponse {
  bool success = 1;
  string message = 2;
}
